@@ -581,12 +581,14 @@ config play_controller::to_config() const
 		buf << side_num;
 		side["side"] = buf.str();
 
-		//current visible units
-		for(unit_map::const_iterator i = units_.begin(); i != units_.end(); ++i) {
-			if(i->second.side() == side_num) {
-				config& u = side.add_child("unit");
-				i->first.write(u);
-				i->second.write(u);
+		if (!linger_){
+			//current visible units
+			for(unit_map::const_iterator i = units_.begin(); i != units_.end(); ++i) {
+				if(i->second.side() == side_num) {
+					config& u = side.add_child("unit");
+					i->first.write(u);
+					i->second.write(u);
+				}
 			}
 		}
 		//recall list
