@@ -8,6 +8,7 @@ Version 1.7.15+svn:
  * Miscellaneous and bug fixes:
    * Defaulted log level to error again
    * Fix bug #14114: checksum operations fail against certain scenario events
+   * Fix bug #15545: recall list gone after loading savegame created in linger mode
    * Fix bug #15601: replay crashes when replay log messages are enabled
    * Added the first draft of the gui2 design documentation
 
